add_executable(imageInterpolation imageInterpolation.cpp)
add_executable(imageCalculation imageCalculation.cpp)
add_executable(crop crop.cpp)
add_executable(histogram histogram.cpp)
add_executable(filters filters.cpp)
add_executable(contour contour.cpp)
add_executable(corner corner.cpp)
add_executable(hough_transform hough_transform.cpp)
add_executable(thinning thinning.cpp)
add_executable(imageFormats imageFormats.cpp)